# GoIT-Web

./: README.md  cripto.py  pyproject.toml
HW1/ContactBook/: __init__.py  core.py  main.py  sort.py
HW10/Final/: Pipfile
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/: LICENSE  README.md  pyproject.toml
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/: config.ini  migration.py  web8
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quoteapp/migrations/: 0001_initial.py  0002_author_about.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quoteapp/static/quoteapp/: style.css
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quoteapp/templates/: extract_tags.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quoteapp/templates/quoteapp/: about_author.html  add_author.html  add_quote.html  author_detail.html  base.html  create_quote.html  index.html  login.html
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/quotes/: settings.py  urls.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/static/quoteapp/: style.css
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/users/: forms.py  models.py  views.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/users/migrations/: 0001_initial.py
HW10/Test/WebPy_HW10-main/WebPy_HW10-main/quotes/users/templates/users/: profile.html  signup.html
HW11/: Pipfile  main.py  models.py  sql_app.db
HW11/Lesss1/: main.py
HW11_2/Final/: contacts.db  main.py
HW11_2/Final_1/: connect_db.py  contacts.db  main.py  models.py
HW2/Poetry/ContactBook/: main.py  pyproject.toml
HW3/: Test (2).ipynb  sort_poolProc.py  test.ipynb  test.py
HW4/: multiprocessing.py  sort_poolThr.py  test.ipynb
HW7/: main.py
HW7/TESTS/test_2_L1/: conspect_core_example.py  example_core.py  example_session.py  pyproject.toml
HW7/TESTS/test_4_l2/: pyproject.toml
HW7/TESTS/test_4_l2/database/: db.py  models.py
HW9/: pyproject.toml
(+279 files in other folders)
